# ollama-mcp

./: AGENTS.md  README.md  SPEC.md  Taskfile.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: dev-loop.agent.md  developer.agent.md  explorer.agent.md  reviewer.agent.md
.github/hooks/scripts/: ci-full.sh  ci-quick.sh
.github/workflows/: build-and-test.yaml  copilot-ready-marker.yml  copilot-setup-steps.yml  lint.yml
src/ollama_mcp/: __main__.py  client.py  envelope.py  errors.py  logging.py  paths.py  server.py
src/ollama_mcp/config/: __init__.py  routing.json  routing.schema.json
src/ollama_mcp/storage/: __init__.py  db.py  evals_repo.py
src/ollama_mcp/storage/migrations/: 001_init.sql
src/ollama_mcp/tools/: __init__.py  compare.py  discovery.py  judge.py  knowledge.py  routing.py  runner.py
tests/: conftest.py  test_compare.py  test_discovery.py  test_envelope.py  test_errors.py  test_judge.py  test_knowledge.py  test_logging.py  test_migrations.py  test_paths.py  test_routing.py  test_runner.py  test_smoke.py  test_storage.py
