[project]
name = "ollama-mcp"
version = "0.1.0"
description = "MCP server that exposes local Ollama models to Claude"
requires-python = ">=3.11"
dependencies = [
  "mcp ~= 1.0",
  "ollama ~= 0.3",
  "httpx ~= 0.27",
  "ulid-py ~= 1.1",
  "jsonschema ~= 4.0",
]

[project.optional-dependencies]
dev = [
  "pytest ~= 8.0",
  "pytest-asyncio ~= 0.23",
  "respx ~= 0.21",
  "mypy ~= 1.11",
  "ruff ~= 0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ollama_mcp"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"
packages = ["ollama_mcp"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
